Remove unused identity login authentication headers.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# Local
 E3DB_AUTH_SERVICE_HOST=http://platform.local.tozny.com:8003
 E3DB_API_URL=http://platform.local.tozny.com
 E3DB_ACCOUNT_SERVICE_HOST=http://platform.local.tozny.com:8002
