Added accountClient V2 health and service checks

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 E3DB_AUTH_SERVICE_HOST=http://platform.local.tozny.com:8003
 E3DB_API_URL=http://platform.local.tozny.com
 E3DB_ACCOUNT_SERVICE_HOST=http://platform.local.tozny.com:8002
+E3DB_ACCOUNT2_SERVICE_HOST=http://platform.local.tozny.com:8012
 E3DB_STORAGE_SERVICE_HOST=http://platform.local.tozny.com:8001
 E3DB_CLIENT_SERVICE_HOST=http://platform.local.tozny.com:8003
 E3DB_HOOK_SERVICE_HOST=http://platform.local.tozny.com:8006
