--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ E3DB_CLIENT_ID=864e4b87-9eda-43fb-ae6d-d07d4275c73a
 BOOTSTRAP_CLIENT_PUBLIC_SIGNING_KEY=yv5ufoSU1AR0dgkw6mmXs6KMTOhvzJGAG5PZGMi07As
 BOOTSTRAP_CLIENT_PRIVATE_SIGNING_KEY=pwp_hOowHv0u5H3c0EryjLPmJz-jqZlfMRDjEEB5TwDK_m5-hJTUBHR2CTDqaZezooxM6G_MkYAbk9kYyLTsCw
 WEBHOOK_URL=https://en8781lpip6xb.x.pipedream.net/
+CLIENT_SERVICE_HOST=http://platform.local.tozny.com:8003
