[PLAT-715] keycloak client framework
- Adds keycloak client.
- Implements GetToken and supporting methods.

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ BOOTSTRAP_CLIENT_PUBLIC_SIGNING_KEY=yv5ufoSU1AR0dgkw6mmXs6KMTOhvzJGAG5PZGMi07As
 BOOTSTRAP_CLIENT_PRIVATE_SIGNING_KEY=pwp_hOowHv0u5H3c0EryjLPmJz-jqZlfMRDjEEB5TwDK_m5-hJTUBHR2CTDqaZezooxM6G_MkYAbk9kYyLTsCw
 WEBHOOK_URL=https://en8781lpip6xb.x.pipedream.net/
 CLIENT_SERVICE_HOST=http://platform.local.tozny.com:8003
+KEYCLOAK_MASTER_REALM=master
+KEYCLOAK_USERNAME=admin
+KEYCLOAK_PASSWORD=password
